--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,11 @@
 #utf-8
-#Sun Mar 01 16:55:17 CST 2009
+#Wed Mar 11 22:08:07 CDT 2009
 plugins.image-proxy=0.1
 plugins.acegi=0.5.1
 plugins.navigation=1.0.3
 app.version=0.1
 app.servlet.version=2.4
-plugins.hibernate=1.1-RC2
+plugins.hibernate=1.1
 app.name=wendysStore
-app.grails.version=1.1-RC2
-plugins.image-tools=1.0.3
+app.grails.version=1.1
+plugins.image-tools=1.0.4
