install shoppingcart plugin

--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #utf-8
-#Thu Mar 12 15:56:51 CDT 2009
+#Thu Mar 12 15:57:51 CDT 2009
 plugins.acegi=0.5.1
 plugins.navigation=1.0.3
 app.version=0.1
+plugins.shopping-cart=0.3
 app.servlet.version=2.4
 plugins.hibernate=1.1
 app.name=wendysStore
