--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,10 @@
 #utf-8
-#Thu Mar 12 15:57:51 CDT 2009
+#Sun Apr 19 15:16:48 CDT 2009
 plugins.acegi=0.5.1
-plugins.navigation=1.0.3
 app.version=0.1
 plugins.shopping-cart=0.3
+plugins.recaptcha=0.3.1
 app.servlet.version=2.4
 plugins.hibernate=1.1
 app.name=wendysStore
 app.grails.version=1.1
-plugins.image-tools=1.0.4
