install my fork of paypal plugin

--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,10 @@
 #utf-8
-#Sun Apr 19 15:16:48 CDT 2009
+#Mon May 04 22:03:23 CDT 2009
 plugins.acegi=0.5.1
 app.version=0.1
 plugins.shopping-cart=0.3
 plugins.recaptcha=0.3.1
+plugins.paypal=0.3-SNAPSHOT
 app.servlet.version=2.4
 plugins.hibernate=1.1
 app.name=wendysStore
