install jawr plugin

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #utf-8
-#Mon May 04 22:03:23 CDT 2009
+#Tue May 12 22:45:47 CDT 2009
 plugins.acegi=0.5.1
 app.version=0.1
 plugins.shopping-cart=0.3
@@ -7,5 +7,6 @@ plugins.recaptcha=0.3.1
 plugins.paypal=0.3-SNAPSHOT
 app.servlet.version=2.4
 plugins.hibernate=1.1
+plugins.jawr=2.51
 app.name=wendysStore
 app.grails.version=1.1
