--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #utf-8
-#Tue May 12 22:45:47 CDT 2009
+#Tue May 12 23:58:06 CDT 2009
+plugins.ui-performance=1.1
 plugins.acegi=0.5.1
 app.version=0.1
 plugins.shopping-cart=0.3
@@ -7,6 +8,5 @@ plugins.recaptcha=0.3.1
 plugins.paypal=0.3-SNAPSHOT
 app.servlet.version=2.4
 plugins.hibernate=1.1
-plugins.jawr=2.51
 app.name=wendysStore
 app.grails.version=1.1
