--- a/application.properties
+++ b/application.properties
@@ -1,12 +1,12 @@
 #utf-8
-#Mon Jul 20 21:57:35 CDT 2009
+#Mon Jul 20 22:52:24 CDT 2009
 plugins.mail=0.7.1
 plugins.acegi=0.5.1
 plugins.ui-performance=1.1
 app.version=0.1
 plugins.shopping-cart=0.3
 plugins.recaptcha=0.3.1
-plugins.tomcat=0.1
+plugins.tomcat=1.2-SNAPSHOT
 plugins.paypal=0.3-SNAPSHOT
 app.servlet.version=2.4
 plugins.hibernate=1.1
