install tinyurl and twitter plugins

--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,10 @@
 #utf-8
-#Sun Oct 11 14:17:47 CDT 2009
+#Tue Nov 10 00:29:28 CST 2009
 plugins.mail=0.7.1
+plugins.tinyurl=0.1
 plugins.acegi=0.5.1
 plugins.ui-performance=1.1
+plugins.twitter=0.2
 app.version=0.1
 plugins.shopping-cart=0.3
 plugins.recaptcha=0.3.1
@@ -13,3 +15,4 @@ plugins.blurb=0.2
 plugins.hibernate=1.1
 app.name=wendysStore
 app.grails.version=1.1
+plugins.settings=1.2
